tests/src/frontend/expand/invalid/expand_unbound_class.sk
fun main(): void {
  void
}

module Test;

fun test(): void {
  S.bar()
}

fun bar(): void {
  void
}
